# robot_path_planner_public

./: .gitignore  .tmp_doxygen_scan.json  CMakeLists.txt  README.md
3rd/: conanfile.py
docs/: hlpmpccorridor_paper_hlp_social_corridor_mpc_hybrid_v2.md  reachability_planner.md  sunshine_planner.md
examples/: main.cpp
include/: astar.h  grid_map.h  path_planner.h
scripts/: build.sh  clear_tf_cache.sh  loop_run.sh  main.sh  replace_repo_name.py  same_goal.sh  tocsv.sh
src/: astar.cpp  grid_map.cpp  path_planner.cpp
src/core/common/: CMakeLists.txt  package.xml
src/core/common/test/: CMakeLists.txt  test_convex_safety_corridor.cpp  warehouse.pgm
src/core/controller/controller/: package.xml
src/core/controller/hlpmpccorridor_local_planner/: CMakeLists.txt  hlpmpccorridor_plugin.xml  package.xml
src/core/controller/hlpmpccorridor_local_planner/include/: AStar_Node.h  Edge.h  Helper.h  Node.h  dynamic_obstacle_cost.h  hybrid_planner.h  hybrid_planner_ros.h  social_cost_function.h
src/core/controller/hlpmpccorridor_local_planner/src/: AStar_Node.cpp  Edge.cpp  Helper.cpp  Node.cpp  dynamic_obstacle_cost.cpp  hybrid_planner.cpp  hybrid_planner_ros.cpp  pedestrian_markers_node.cpp  simple_mpc.cpp  social_cost_function.cpp
src/core/controller/ilqr_controller/: CMakeLists.txt  ilqr_controller_plugin.xml  package.xml
src/core/controller/ilqr_controller/include/controller/: ilqr_controller.h
src/core/controller/ilqr_controller/src/: ilqr_controller.cpp
src/core/controller/reachability_controller/: CMakeLists.txt  package.xml  reachability_controller_plugin.xml
src/core/controller/reachability_controller/cfg/: ReachabilityController.cfg
src/core/controller/reachability_controller/include/controller/: reachability_controller.h  reachability_dwa.h
src/core/controller/reachability_controller/src/: reachability_controller.cpp  reachability_dwa.cpp  reachability_mppi.cpp
src/core/path_planner/path_planner/: CMakeLists.txt  package.xml  path_planner_plugin.xml
src/core/path_planner/path_planner/include/path_planner/: path_planner.h  path_planner_node.h
src/core/path_planner/path_planner/include/path_planner/graph_planner/: astar_planner.h  reachability_planner.h
src/core/path_planner/path_planner/include/path_planner/graph_planner/hybrid_astar_planner/: analytic_expansion.h  astar_framework.h  hybrid_astar_planner.h  node_hybrid.h  node_wrapper.h
src/core/path_planner/path_planner/include/path_planner/sample_planner/: sunshine_planner.h
src/core/path_planner/path_planner/include/path_planner/utils/: motions.h
src/core/path_planner/path_planner/src/: path_planner.cpp  path_planner_node.cpp
src/core/path_planner/path_planner/src/graph_planner/: astar_planner.cpp  reachability_planner.cpp
src/core/path_planner/path_planner/src/graph_planner/hybrid_astar_planner/: analytic_expansion.cpp  astar_framework.cpp  hybrid_astar_planner_impl.cpp  node_hybrid.cpp  node_wrapper.cpp
src/core/path_planner/path_planner/src/sample_planner/: sunshine_planner.cpp
src/core/path_planner/path_processor/: package.xml
src/core/trajectory_planner/: CMakeLists.txt  package.xml
src/core/trajectory_planner/include/trajectory_planner/trajectory_optimization/: optimizer.h  optimizer_core.h
src/core/trajectory_planner/include/trajectory_planner/trajectory_optimization/conjugate_optimizer/: conjugate_optimizer.h
src/core/trajectory_planner/include/trajectory_planner/trajectory_optimization/lbfgs_optimizer/: lbfgs_optimizer.h
src/core/trajectory_planner/include/trajectory_planner/trajectory_optimization/minimumsnap_optimizer/: minimumsnap_optimizer.h  time_allocation.h
src/core/trajectory_planner/src/trajectory_optimization/: optimizer.cpp
src/core/trajectory_planner/src/trajectory_optimization/conjugate_optimizer/: conjugate_optimizer.cpp
src/core/trajectory_planner/src/trajectory_optimization/lbfgs_optimizer/: lbfgs_optimizer.cpp
src/core/trajectory_planner/src/trajectory_optimization/minimumsnap_optimizer/: minimumsnap_optimizer.cpp
src/plugins/map_plugins/distance_layer/: CMakeLists.txt  distance_layer_costmap_plugin.xml  package.xml
src/plugins/map_plugins/distance_layer/include/: distance_layer.h  euclidean_distance_field.h
src/plugins/map_plugins/distance_layer/src/: distance_layer.cpp  euclidean_distance_field.cpp
src/plugins/map_plugins/globalreachability_layer/: CMakeLists.txt  globalreachability_layer_costmap_plugin.xml  package.xml
src/plugins/map_plugins/globalreachability_layer/include/globalreachability_layer/: globalreachability_layer.h
src/plugins/map_plugins/globalreachability_layer/src/: globalreachability_layer.cpp
src/plugins/map_plugins/localreachability_layer/: CMakeLists.txt  localreachability_layer_costmap_plugin.xml  package.xml
src/plugins/map_plugins/localreachability_layer/include/localreachability_layer/: localreachability_layer.h
src/plugins/map_plugins/localreachability_layer/src/: localreachability_layer.cpp
src/plugins/map_plugins/social_layer/: CMakeLists.txt  package.xml  social_layer.h  social_layer_costmap_plugin.xml
src/plugins/map_plugins/social_layer/include/social_layer/: social_layer.h
src/plugins/map_plugins/social_layer/src/: social_layer.cpp  social_layer_global_debug_node.cpp  social_layer_local_debug_node.cpp
src/plugins/map_plugins/voronoi_layer/: package.xml
src/sim_env/config/: move_base_params.yaml
src/sim_env/config/controller/: hlpmpccorridor_local_planner.yaml  ilqr_controller_params.yaml  reachability_controller_params.yaml
src/sim_env/config/costmap/: global_costmap_plugins.yaml  global_costmap_plugins_social.yaml  local_costmap_plugins.yaml  local_costmap_plugins_social.yaml
src/sim_env/config/planner/: evolutionary_planner_params.yaml  sample_planner_params.yaml
src/sim_env/launch/: config.launch  main.launch
src/sim_env/rviz/: selfmap1.rviz  sim_env.rviz  sim_env2.rviz
src/sim_env/scripts/: goal_publisher.py  tf_map2odom.py
src/sim_env/worlds/: test2.world  warehouse_with_pedestrians.world
test/: CMakeLists.txt  test_path_planner.cpp
(+79 files in other folders)
