<?xml version="1.0"?>

<package format="2">
  <name>reachability_controller</name>
  <version>0.0.0</version>
  <description>Reachability-aware local controller for navigation</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>localreachability_layer</depend>
  <depend>cmake_modules</depend>
  <depend>Eigen3</depend>

  <export>
    <nav_core plugin="${prefix}/reachability_controller_plugin.xml" />
  </export>
</package>
