<?xml version="1.0"?>

<package format="2">
  <name>path_planner</name>
  <version>0.0.0</version>
  <description>The path_planner package</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>common</depend>
  <depend>path_processor</depend>
  <depend>trajectory_planner</depend>
  <depend>std_msgs</depend>
  <depend>voronoi_layer</depend>
  <depend>globalreachability_layer</depend>

  <export>
    <nav_core plugin="${prefix}/path_planner_plugin.xml" />
  </export>
</package>
