<?xml version="1.0"?>

<package format="2">
  <name>distance_layer</name>
  <version>0.0.0</version>
  <description>The distance_layer package</description>
  <maintainer email="913982779@qq.com">winter</maintainer>
  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/distance_layer_costmap_plugin.xml" />
  </export>

</package>
