<?xml version="1.0"?>

<package format="2">
  <name>globalreachability_layer</name>
  <version>0.0.0</version>
  <description>Global reachability-aware costmap layer for path planning</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>distance_layer</depend>
  <depend>voronoi_layer</depend>

  <export>
    <costmap_2d plugin="${prefix}/globalreachability_layer_costmap_plugin.xml" />
  </export>
</package>
